--- a/app/src/main/res/layout/activity_lab.xml
+++ b/app/src/main/res/layout/activity_lab.xml
@@ -41,7 +41,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="false"
             android:layout_marginTop="600dp"
-            android:fontFamily="@font/robotobold"
+            android:fontFamily="@font/roboto_bold"
             android:text="No Lab Tests"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -55,7 +55,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="9dp"
             android:layout_marginTop="85dp"
-            android:fontFamily="@font/robotobold"
+            android:fontFamily="@font/roboto_bold"
             android:text="Your Lab Tests"
             android:textColor="@color/teal_700"
             android:textSize="35sp"
