--- a/app/src/main/res/layout/activity_meditate.xml
+++ b/app/src/main/res/layout/activity_meditate.xml
@@ -13,7 +13,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:hint="5-30 minutes"
+        android:hint="@string/_5_30_minutes"
         android:inputType="number"
         android:maxLength="4"
         android:textColor="@color/white"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginBottom="115dp"
-        android:text="Set"
+        android:text="@string/set"
         android:textColor="#000000"
         app:backgroundTint="#1BEDD9"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
-        android:text="start"
+        android:text="@string/start"
         android:textColor="#000000"
         app:backgroundTint="@color/mint"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginBottom="37dp"
-        android:text="reset"
+        android:text="@string/reset"
         android:textColor="#000000"
         android:visibility="invisible"
         app:backgroundTint="#1BEDD9"
@@ -116,7 +116,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="cursive"
-        android:text="breathe_and_let_go"
+        android:text="@string/breathe_and_let_go"
         android:textColor="#D71EF6"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
