--- a/app/src/main/res/layout/activity_notification_fragment.xml
+++ b/app/src/main/res/layout/activity_notification_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#A7BEAE"
-        android:text="Pills"
+        android:text="@string/pills"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#A7BEAE"
-        android:text="Visits"
+        android:text="@string/visits"
 
         android:textAlignment="center"
         android:textSize="20sp"
@@ -49,7 +49,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#A7BEAE"
-        android:text="Labs"
+        android:text="@string/labs"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
