--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -26,9 +26,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/arima_madurai_extrabold"
+            android:fontFamily="@font/arima_madurai_extra_bold"
             android:textStyle="bold"
-            android:text="Self-Assessment Quiz"
+            android:text="@string/self_assessment_quiz"
             android:textAlignment="center"
             android:textColor="#1A237E"
             android:textSize="30sp" />
@@ -64,7 +64,7 @@
                     android:textColor="#070505"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="adhd"
+                    android:text="@string/adhd"
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -80,7 +80,7 @@
                     android:textColor="#070505"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="anxiety"
+                    android:text="@string/anxiety"
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -99,7 +99,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:text="bipolar"
+                    android:text="@string/bipolar"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:text="depression"
+                    android:text="@string/depression"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +131,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:text="ocd"
+                    android:text="@string/ocd"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +147,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:text="ptsd"
+                    android:text="@string/ptsd"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
