--- a/app/src/main/res/layout/activity_ring.xml
+++ b/app/src/main/res/layout/activity_ring.xml
@@ -9,7 +9,7 @@
         android:layout_width="109dp"
         android:layout_height="53dp"
         android:layout_marginBottom="51dp"
-        android:text="DISMISS"
+        android:text="@string/dismiss"
         android:backgroundTint="#FF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         android:layout_marginTop="63dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="25dp"
-        android:text="I have taken my Medicine"
+        android:text="@string/i_have_taken_my_medicine"
         android:textColor="@color/white"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/button_dismiss"
