--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -27,9 +27,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/arima_madurai_extrabold"
+            android:fontFamily="@font/arima_madurai_extra_bold"
             android:textStyle="bold"
-            android:text="To-Do List"
+            android:text="@string/to_do_list"
             android:textAlignment="center"
             android:textColor="#1A237E"
             android:textSize="30sp" />
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#9219D5F0"
-                android:text="My Completed Tasks"
+                android:text="@string/my_completed_tasks"
                 style="?android:attr/buttonBarButtonStyle">
 
             </Button>
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#5BCEDF"
-                android:text="My Pending Tasks"
+                android:text="@string/my_pending_tasks"
                 style="?android:attr/buttonBarButtonStyle">
 
             </Button>
