--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -46,7 +46,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="false"
                     android:layout_marginTop="600dp"
-                    android:fontFamily="@font/robotobold"
+                    android:fontFamily="@font/roboto_bold"
                     android:text="No Appointments"
                     android:textAlignment="center"
                     android:textColor="@color/black"
@@ -60,7 +60,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="9dp"
                     android:layout_marginTop="85dp"
-                    android:fontFamily="@font/robotobold"
+                    android:fontFamily="@font/roboto_bold"
                     android:text="Your Appointments"
                     android:textColor="@color/white"
                     android:textSize="35sp"
