--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:hint="medicine name"
+        android:hint="@string/medicine_name"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView">
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:hint="note (optional)"
+        android:hint="@string/note_optional"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView2">
@@ -55,12 +55,12 @@
             android:id="@+id/radio_button_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Before Food" />
+            android:text="@string/before_food" />
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="After Food" />
+            android:text="@string/after_food" />
 
     </RadioGroup>
 
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="150dp"
-            android:text="Morning" />
+            android:text="@string/morning" />
 
         <Button
             android:id="@+id/lunch"
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="150dp"
-            android:text="afternoon" />
+            android:text="@string/afternoon" />
 
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
@@ -113,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="150dp"
-            android:text="Night" />
+            android:text="@string/night" />
 
 
         <Button
@@ -122,7 +122,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="150dp"
-            android:text="Custom" />
+            android:text="@string/custom" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="55dp"
         android:layout_marginEnd="17dp"
-        android:text="Add Medicine"
+        android:text="@string/add_medicine"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
         app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
         app:layout_constraintStart_toStartOf="parent" />
@@ -144,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="203dp"
-        android:text="cancel"
+        android:text="@string/cancel"
         android:backgroundTint="#FF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
