--- a/app/src/main/res/layout/activity_lab_add.xml
+++ b/app/src/main/res/layout/activity_lab_add.xml
@@ -11,7 +11,7 @@
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:background="@color/YellowAeroSpace"
-        android:fontFamily="@font/robotobold"
+        android:fontFamily="@font/roboto_bold"
         android:paddingStart="10dp"
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
