--- a/app/src/main/res/layout/activity_new_habit.xml
+++ b/app/src/main/res/layout/activity_new_habit.xml
@@ -27,9 +27,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/arima_madurai_extrabold"
+            android:fontFamily="@font/arima_madurai_extra_bold"
             android:textStyle="bold"
-            android:text="New Habit"
+            android:text="@string/new_habit"
             android:textAlignment="center"
             android:textColor="#1A237E"
             android:textSize="30sp" />
@@ -58,7 +58,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="180dp"
             android:layout_marginBottom="370dp"
-            android:text="habit_name"
+            android:text="@string/habit_name"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="24sp"
@@ -92,7 +92,7 @@
             android:layout_marginBottom="230dp"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:gravity="center_horizontal"
-            android:text="habit_end_date"
+            android:text="@string/end_date"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -129,7 +129,7 @@
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:gravity="center_horizontal"
             android:layout_marginBottom="190dp"
-            android:text="habit_frequency"
+            android:text="@string/frequency"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="24sp"
@@ -162,7 +162,7 @@
         android:layout_gravity="center_horizontal"
         android:background="#9378C7"
         android:backgroundTintMode="add"
-        android:text="add_new_habit"
+        android:text="@string/add_new_habit"
         android:textAlignment="center"
         android:textColor="#E8F8F7F7"
         android:textStyle="bold"
