--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -9,7 +9,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="195dp"
-        android:hint="medicine name"
+        android:hint="@string/medicine_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -26,7 +26,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="39dp"
-        android:hint="note (optional)"
+        android:hint="@string/dose"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_name">
@@ -51,13 +51,13 @@
             android:id="@+id/up_radio_button_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Before Food" />
+            android:text="@string/before_food" />
 
         <RadioButton
             android:id="@+id/up_radio_button_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="After Food" />
+            android:text="@string/after_food" />
 
     </RadioGroup>
 
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="150dp"
-            android:text="Morning" />
+            android:text="@string/morning" />
 
         <Button
             android:id="@+id/up_lunch"
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="150dp"
-            android:text="afternoon" />
+            android:text="@string/afternoon" />
 
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
@@ -98,14 +98,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_radioGroup">
 
-
         <Button
             android:id="@+id/up_night"
             style="?attr/materialButtonOutlinedStyle"
             android:width="150dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Night" />
+            android:text="@string/night" />
 
 
         <Button
@@ -114,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="150dp"
-            android:text="Custom" />
+            android:text="@string/custom" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -124,7 +123,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="48dp"
-        android:text="update"
+        android:text="@string/update"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_toggleButton" />
 
@@ -133,7 +132,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginEnd="80dp"
-        android:text="cancel"
+        android:text="@string/cancel"
         android:backgroundTint="#FF0000"
         app:layout_constraintBottom_toBottomOf="@+id/up_updatebtn"
         app:layout_constraintEnd_toEndOf="parent"
