--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="Medicine Name"
+        android:text="@string/medicine_name"
         android:textSize="30sp"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="18dp" />
@@ -27,7 +27,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="99dp"
         android:layout_marginBottom="5dp"
-        android:text="Time : 1500"
+        android:text="@string/time_1500"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="63dp" />
 
@@ -39,7 +39,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="60dp"
-        android:text="Before food"
+        android:text="@string/before_food"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="63dp" />
 
