--- a/app/src/main/res/layout/fragment_habits.xml
+++ b/app/src/main/res/layout/fragment_habits.xml
@@ -28,8 +28,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/arima_madurai_extrabold"
-            android:text="Habit Tracker"
+            android:fontFamily="@font/arima_madurai_extra_bold"
+            android:text="@string/habit_tracker"
             android:textAlignment="center"
             android:textColor="#1A237E"
             android:textSize="30sp"
