--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -41,8 +41,8 @@
             android:layout_alignParentBottom="false"
             android:textAlignment="center"
             android:layout_marginTop="600dp"
-            android:text="No Medicines"
-            android:fontFamily="@font/robotobold"
+            android:text="@string/no_medicines"
+            android:fontFamily="@font/roboto_bold"
             android:textColor="@color/black"
             android:textSize="30sp" />
         <TextView
@@ -53,8 +53,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="9dp"
             android:layout_marginTop="85dp"
-            android:fontFamily="@font/robotobold"
-            android:text="Your Medicines"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/your_medicines"
             android:textColor="@color/white"
             android:textSize="35sp"
             app:layout_constraintBottom_toTopOf="@+id/listview"
