--- a/app/src/main/res/layout/view_habit.xml
+++ b/app/src/main/res/layout/view_habit.xml
@@ -11,7 +11,7 @@
         android:layout_width="52dp"
         android:layout_height="68dp"
         android:backgroundTint="@color/upArrow"
-        android:contentDescription="no"
+        android:contentDescription="TODO"
         android:src="@android:drawable/arrow_up_float"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_width="52dp"
         android:layout_height="68dp"
         android:backgroundTint="@color/downArrow"
-        android:contentDescription="yes"
+        android:contentDescription="TODO"
         android:src="@android:drawable/arrow_down_float"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
