--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:top="8dp" android:bottom="8dp" android:left="8dp" android:right="8dp">
         <shape android:shape="oval">
-            <solid android:color="@android:color/transparent"/>
+            <solid android:color="@color/purple_700"/>
             <size android:width="48dp" android:height="42dp"/>
         </shape>
     </item>
