--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E7E8D1"
-    tools:context=".Registration">
+    tools:context=".ui.login.Registration">
 
 
     <TextView
