--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">#FFFAFA</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -21,5 +21,7 @@
     <color name="lemonGreen">#41E32F</color>
     <color name="OrangeAeroSpace">#fd5200</color>
     <color name="YellowAeroSpace">#FFE162</color>
+    <color name="Snow">#FF3700B3</color>
+    <color name="WhiteSmoke">#F5F5F5</color>
 
 </resources>
