--- a/app/src/main/res/layout/fragment_mood.xml
+++ b/app/src/main/res/layout/fragment_mood.xml
@@ -444,6 +444,7 @@
                 android:layout_width="370dp"
                 android:layout_height="280dp"
                 android:background="@color/white"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/child_of_calender_showing_days">
@@ -454,6 +455,7 @@
                   android:background="@drawable/round_button"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />
 
@@ -462,6 +464,7 @@
                   style="?android:attr/borderlessButtonStyle"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
+                  android:textColor="@color/black"
                   android:background="@drawable/round_button"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_1"
@@ -471,6 +474,7 @@
                   android:id="@+id/calender_button_showing_shadow_3"
                   style="?android:attr/borderlessButtonStyle"
                   android:layout_width="48dp"
+                  android:textColor="@color/black"
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
                   android:background="@drawable/round_button"
@@ -483,6 +487,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_3"
                   app:layout_constraintTop_toTopOf="parent" />
@@ -492,6 +497,7 @@
                   style="?android:attr/borderlessButtonStyle"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
+                  android:textColor="@color/black"
                   android:background="@drawable/round_button"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_4"
@@ -502,6 +508,7 @@
                   style="?android:attr/borderlessButtonStyle"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
+                  android:textColor="@color/black"
                   android:background="@drawable/round_button"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_5"
@@ -513,6 +520,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_6"
                   app:layout_constraintTop_toTopOf="parent" />
@@ -522,6 +530,7 @@
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
                   android:layout_width="48dp"
+                  android:textColor="@color/black"
                   android:layout_height="42dp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_1" />
@@ -531,6 +540,7 @@
                   style="?android:attr/borderlessButtonStyle"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
+                  android:textColor="@color/black"
                   android:background="@drawable/round_button"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_1"
@@ -540,6 +550,7 @@
                   android:id="@+id/calender_button_showing_shadow_10"
                   style="?android:attr/borderlessButtonStyle"
                   android:layout_width="48dp"
+                  android:textColor="@color/black"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"                  android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_2"
@@ -551,6 +562,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_3"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_1" />
@@ -561,6 +573,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_4"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_1" />
@@ -572,6 +585,7 @@
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_5"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_1" />
 
@@ -579,6 +593,7 @@
                   android:id="@+id/calender_button_showing_shadow_14"
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
@@ -591,6 +606,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_8" />
 
@@ -600,6 +616,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_8"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_8" />
@@ -610,6 +627,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_2"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_8" />
@@ -620,6 +638,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_3"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_8" />
@@ -631,7 +650,7 @@
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
                   android:background="@drawable/round_button"
-                  android:text=""
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_4"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_8" />
 
@@ -641,6 +660,7 @@
                   android:background="@drawable/round_button"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_5"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_8" />
@@ -649,6 +669,7 @@
                   android:id="@+id/calender_button_showing_shadow_21"
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
@@ -659,6 +680,7 @@
                   android:id="@+id/calender_button_showing_shadow_22"
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   app:layout_constraintStart_toStartOf="parent"
@@ -668,6 +690,7 @@
                   android:id="@+id/calender_button_showing_shadow_23"
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_width="48dp"
                   android:alpha="100"
                   android:layout_height="42dp"
@@ -679,6 +702,7 @@
                   android:id="@+id/calender_button_showing_shadow_24"
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
@@ -689,6 +713,7 @@
                   android:id="@+id/calender_button_showing_shadow_25"
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
@@ -701,6 +726,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_4"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_15" />
@@ -711,6 +737,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_5"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_15" />
@@ -721,6 +748,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_6"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_15" />
@@ -731,6 +759,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_22" />
 
@@ -740,6 +769,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_8"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_22" />
@@ -750,6 +780,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_2"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_22" />
@@ -761,6 +792,7 @@
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_3"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_22" />
 
@@ -770,6 +802,7 @@
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_marginStart="4dp"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_4"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_22" />
@@ -781,6 +814,7 @@
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_5"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_22" />
 
@@ -791,6 +825,7 @@
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_6"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_22" />
 
@@ -798,6 +833,7 @@
                   android:id="@+id/calender_button_showing_shadow_36"
                   style="?android:attr/borderlessButtonStyle"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   android:layout_width="48dp"
                   android:layout_height="42dp"
                   android:layout_marginStart="2dp"
@@ -811,6 +847,7 @@
                   android:layout_height="42dp"
                   android:layout_marginStart="4dp"
                   android:background="@drawable/round_button"
+                  android:textColor="@color/black"
                   app:layout_constraintStart_toEndOf="@+id/calender_button_showing_shadow_8"
                   app:layout_constraintTop_toBottomOf="@+id/calender_button_showing_shadow_29" />
 
