--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -89,12 +89,12 @@
 
     <ImageView
         android:id="@+id/image_logo"
-        android:layout_width="106dp"
-        android:layout_height="91dp"
+        android:layout_width="138dp"
+        android:layout_height="142dp"
         android:layout_below="@id/Email"
-        android:layout_marginBottom="512dp"
+        android:layout_marginBottom="508dp"
         android:contentDescription="TODO"
-        android:src="@drawable/voz"
+        android:src="@drawable/vozyk_log"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -108,7 +108,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="#A7BEAE"
+        android:backgroundTint="@color/Bluebell"
         android:text="@string/login"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
